# ip-updater

client/: Cargo.toml  updater.conf
client/src/: main.rs
server/: .gitignore  Cargo.toml  configure-proxy.sh  template.conf  updater.conf
server/src/: main.rs  service.rs  update.rs
