[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version =  "0.12.23", features = ["blocking"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
async-std = "1.13.2"
once_cell = "1.21.3"
# Enable to build for linux
# openssl = { version = "0.10.73" , features = ["vendored"] }